Corrected z-index issue, regression from the previous commit.

--- a/web/pgadmin/static/scss/_alertify.overrides.scss
+++ b/web/pgadmin/static/scss/_alertify.overrides.scss
@@ -1,5 +1,6 @@
 /* Overrides alertify js headers */
 .alertify {
+  z-index: 3000;
   position: fixed;
 
   .ajs-header {
